sq: (base-v51)改用go-supervisord; 独立sv-chansrv(免进程挂掉后xrdp进入等待时长)； entry/xconf sudo tee优化； bin下脚本优化； -- core: entry  > /dev/null 2>&1
core: entry |sudo tee

ccore: xconf |sudo tee -a

|sudo tee -a

core: entry echo export $one | sudo tee -a /.env

cd /tmp;

fluxbox reconfig > /dev/null 2>&1

# reload flux

sethotkey fix sed -i "s/^$oldKey/$nKey/g"

bin/pkgsize format

bin/sethotkey format usage: sethotkey c/a

core: up bin/setlocal

core: xconf && go-supervisord ctl -h || go-supervisord ctl \$@

core: xconf f2

mkdir -p /var/log/supervisor; \

fix

f

core: redown # go-supervisor

core: img_build docker-headless:core

downUrl=https://ghproxy.com/

core: downUrl=https://gitee.com/infrastlabs/docker-headless/raw/dev/_doc/assets/theme; \

port=0.0.0.0:10023 ;9001

core: svd.conf port=0.0.0.0:10022 ;9001

core: entry sed svd

fix

core: +img_build.sh for local build (none-multiArch)

core: buildx ver=v51 #base-v5 base-v5-slim

core: FROM base-v51-slim

core: gen-sv-chansrv

core: split chansrv

ccore: xconf /bin/sv

core: ref exec go-supervisord

core: Dockerfile ADD svd.conf

core: +svd.conf

# go-supervisor

core: +svd.conf

--- a/ubt-core/src/de-entry.service
+++ b/ubt-core/src/de-entry.service
@@ -4,6 +4,7 @@ Description=x11 server
 [Service]
 Type=simple
 User=root
-ExecStart=/bin/bash -c "source /.env; exec supervisord -n"
+#supervisord -n > go-supervisord
+ExecStart=/bin/bash -c "source /.env; exec go-supervisord"
 [Install]
 WantedBy=multi-user.target
