core: sv: autorestart=true

--- a/ubt-core/src/sv.conf
+++ b/ubt-core/src/sv.conf
@@ -30,6 +30,7 @@ user=root
 ; autorestart=true
 ; stopsignal=QUIT
 startretries=5
+autorestart=true
 command=/usr/sbin/xrdp -nodaemon
 stdout_logfile=/var/log/supervisor/_xrdp.log
 stdout_logfile_maxbytes = 50MB
@@ -40,6 +41,7 @@ redirect_stderr=true
 priority=33
 user=root
 startretries=5
+autorestart=true
 command=/usr/sbin/dropbear -EFRp 22
 stdout_logfile=/var/log/supervisor/_ssh.log
 stdout_logfile_maxbytes = 50MB
@@ -50,6 +52,7 @@ redirect_stderr=true
 priority=34
 user=root
 startretries=5
+autorestart=true
 command=bash -c "cd /usr/local/webhookd; exec bash ./run.sh"
 stdout_logfile=/var/log/supervisor/_novnc.log
 stdout_logfile_maxbytes = 50MB
